// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regular item Should render with icon 1`] = `
<div
  className="dropdown-regular-item class-name-example"
  onClick={[Function]}
  title="Some text"
>
  <img
    alt=""
    className="dropdown-regular-item__icon"
    src="test-file-stub"
  />
  <span>
    Some text
  </span>
  
</div>
`;

exports[`Regular item Should render with remark 1`] = `
<div
  className="dropdown-regular-item class-name-example"
  onClick={[Function]}
  title="Some text"
>
  
  <span>
    Some text
  </span>
  <span
    className="remark dropdown-regular-item__remark"
  >
    Some text
  </span>
</div>
`;
